--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,14 @@ hr{
     width: 50%;
       
 }
+
+/* Map Things */
+ #map {
+    height: 50%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
