--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,15 @@ hr{
     width: 50%;
       
 }
+
+/* Always set the map height explicitly to define the size of the div
+ * element that contains the map. */
+ #map {
+    height: 50%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
