--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 
 #jumboMargin{
     margin-top: 56px;
+    margin-bottom: 0;
 }
 
 #header{
@@ -24,7 +25,7 @@
     background-size: cover; */
 } 
 
-.cardInfo{
+.cardMargin{
     margin-bottom: .75rem;
 }
 body{
@@ -41,10 +42,14 @@ hr{
       
 }
 
+.text-right{
+    text-align: end
+}
+
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
- #map {
-    height: 250px;
-    margin-bottom: 2rem;
+ #map{
+    height: 400px;
+    margin: 2rem auto;
   }
   /* Optional: Makes the sample page fill the window. */
