Fixed Footer Padding

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ hr{
   #footer .closingSec{
       font-size: 0.7rem;
       margin-bottom: 0px;
+      padding: 2rem;
       background-color:  #232323;
   }
 
